Updated html and css

--- a/index.html
+++ b/index.html
@@ -19,14 +19,16 @@
         </div>
     </nav>
     <div class="first-section">
-        <div>
-            <h1>The best tool for hacking!</h1>
-            <p>Flipper Zero is a portable multi-tool for pentesters and geeks in a toy-like body. It loves hacking digital stuff, such as radio protocols, access control systems, hardware and more. It's fully open-source and customizable, so you can extend it in whatever way you like.</p>
-            <button>BUY NOW</button>
-        </div>
-        <div>
-            <img src="https://thumb.tildacdn.com/tild3563-3861-4230-a461-346433366163/-/format/webp/explosion-singed-200.png" alt="">
-        </div>
+        <div class="center-items">
+            <div>
+                <h1>The best tool for hacking!</h1>
+                <p>Flipper Zero is a portable multi-tool for pentesters and geeks in a toy-like body. It loves hacking digital stuff, such as radio protocols, access control systems, hardware and more. It's fully open-source and customizable, so you can extend it in whatever way you like.</p>
+                <button>BUY NOW</button>
+            </div>
+            <div>
+                <img src="https://thumb.tildacdn.com/tild3563-3861-4230-a461-346433366163/-/format/webp/explosion-singed-200.png" alt="">
+            </div>
+        </div>    
     </div>
     <div class="second-section">
         <div class="title">
